--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "elasticsearch": "^11.0.1",
     "express": "^4.14.0",
-    "node-twig": "^1.1.0",
-    "sqlite3": "^3.1.4"
+    "node-twig": "^1.1.0"
   },
   "devDependencies": {},
   "scripts": {
