--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "child_process": "^1.0.2",
     "elasticsearch": "^11.0.1",
     "express": "^4.14.0",
     "node-twig": "^1.1.0"
